--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   flutter_picker: ^2.0.4
   geolocator: ^8.0.5
   http: ^0.13.4
+  flutter_svg: ^1.0.3
+  google_fonts: ^2.0.0
+  timer_builder: ^2.0.0
+  intl: ^0.17.0
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - svgs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
