--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.7
   numberpicker: ^2.1.1
+  flutter_ringtone_player: ^3.2.0
 
 dev_dependencies:
   flutter_test:
