--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  geolocator: ^8.0.5
+  geolocator: ^9.0.2
   http: ^0.13.4
   flutter_svg: ^1.0.3
   google_fonts: ^2.0.0
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.7
   numberpicker: ^2.1.1
   flutter_ringtone_player: ^3.2.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
