--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   numberpicker: ^2.1.1
   flutter_ringtone_player: ^3.2.0
   provider: ^6.0.4
+  sqflite: ^2.2.0+3
 
 dev_dependencies:
   flutter_test:
