--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_ringtone_player: ^3.2.0
   provider: ^6.0.4
   sqflite: ^2.2.0+3
+  google_maps_flutter: ^2.2.1
 
 dev_dependencies:
   flutter_test:
