--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.4
   sqflite: ^2.2.0+3
   google_maps_flutter: ^2.2.1
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
